# atelier-vecteur

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: launch.json
marketing/: README.md  calendrier-14-jours.md  checklist-lancement.md  fiche-produit.md  publications-reseaux.md  scripts-videos.md  strategie.md
public/: runtime-config.json
scripts/: copy-installers.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  updater_signing_key.pem.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  file_io.rs  fonts.rs  images.rs  mod.rs
src-tauri/src/project/: schema.rs
src-tauri/src/svgopt/: clean.rs
src/app-shell/: AboutDialog.tsx  FeedbackDialog.tsx  MenuBar.tsx  SettingsDialog.tsx  StatusBar.tsx  Toolbar.tsx  UpdateDialog.tsx  WelcomeDialog.tsx  Workspace.tsx
src/canvas/: CanvasViewport.tsx  GradientHandles.tsx  PathNodeHandles.tsx  SceneRenderer.tsx  SelectionOverlay.tsx  Shape.tsx  TextEditOverlay.tsx  hitTest.ts  viewportMath.ts
src/config/: donation.test.ts  donation.ts  runtimeConfig.test.ts  runtimeConfig.ts
src/hooks/: useDocumentSafety.ts  useKeyboardShortcuts.ts
src/i18n/: i18n.test.ts  index.ts  useI18n.ts
src/io/: imageImport.test.ts  imageImport.ts  pngExport.ts  projectFile.ts  svgExport.ts  textToPath.ts  updater.ts
src/scene/: bezier.test.ts  bezier.ts  booleanOps.test.ts  booleanOps.ts  factory.test.ts  factory.ts  geometry.test.ts  geometry.ts  imageHref.test.ts  imageHref.ts  pathData.test.ts  types.ts  (+5 more)
(+77 files in other folders)
